# textual-rs

./: .continue-here.md  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ssh.exe.stackdump
.github/workflows/: ci.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/notes/: 2026-03-26-python-textual-widget-parity.md
.planning/phases/00-full-project/: full-UAT.md
.planning/phases/01-foundation/: 01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-VALIDATION.md
.planning/phases/01-semantic-theme-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md
.planning/phases/02-interactive-states-rendering/: 02-01-SUMMARY.md
.planning/phases/02-widget-tree-layout-and-styling/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-04-PLAN.md
.planning/phases/04-built-in-widget-library/: 04-02-PLAN.md  04-03-SUMMARY.md  04-08-PLAN.md  04-09-SUMMARY.md  04-DISCUSSION-LOG.md  04-RESEARCH.md
.planning/phases/04-production-readiness/: 04-03-SUMMARY.md  04-05-SUMMARY.md
.planning/phases/05-developer-experience-and-polish/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-04-SUMMARY.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/05-screen-stack/: 05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-VERIFICATION.md
.planning/phases/08-enhanced-display-widgets/: 08-01-PLAN.md  08-02-PLAN.md
.planning/todos/pending/: widget-parity.md
crates/textual-rs/: Cargo.toml
crates/textual-rs-macros/: Cargo.toml
crates/textual-rs-macros/src/: derive_widget.rs  lib.rs  widget_impl.rs
crates/textual-rs/examples/: demo.rs  demo.tcss  irc_demo.rs  irc_demo.tcss  screen_stack.rs  tutorial_01_hello.rs  tutorial_02_layout.rs  tutorial_03_events.rs  tutorial_04_reactive.rs  tutorial_05_workers.rs
crates/textual-rs/src/: animation.rs  app.rs  canvas.rs  event.rs  hyperlink.rs  lib.rs  terminal.rs  worker.rs
crates/textual-rs/src/command/: mod.rs  palette.rs  registry.rs
crates/textual-rs/src/css/: cascade.rs  mod.rs  parser.rs  property.rs  render_style.rs  selector.rs  theme.rs  types.rs
crates/textual-rs/src/event/: dispatch.rs  keybinding.rs  message.rs  mod.rs  timer.rs
crates/textual-rs/src/layout/: bridge.rs  hit_map.rs  mod.rs  style_map.rs  tests.rs
crates/textual-rs/src/reactive/: mod.rs
crates/textual-rs/src/testing/: assertions.rs  mod.rs  pilot.rs
crates/textual-rs/src/widget/: button.rs  checkbox.rs  collapsible.rs  context.rs  context_menu.rs  data_table.rs  directory_tree.rs  footer.rs  header.rs  input.rs  label.rs  layout.rs  list_view.rs  log.rs  markdown.rs  mod.rs  placeholder.rs  progress_bar.rs  radio.rs  rich_log.rs  screen.rs  scroll_view.rs  select.rs  sparkline.rs  switch.rs  tabs.rs  text_area.rs  toast.rs  tree.rs  tree_view.rs
crates/textual-rs/tests/: command_palette_tests.rs  final_irc_check.rs  focus_check.rs  integration_test.rs  interactive_states.rs  layout_debug.rs  macro_tests.rs  proptest_css.rs  render_primitives.rs  screen_stack.rs  snapshot_tests.rs  test_harness.rs  visual_check.rs  visual_irc_check.rs  visual_regression.rs  widget_tests.rs  worker_tests.rs
crates/textual-rs/tests/snapshots/: snapshot_tests__large_terminal.snap  snapshot_tests__small_terminal.snap  snapshot_tests__snapshot_empty_widget.snap  snapshot_tests__snapshot_greeting_widget.snap  widget_tests__snapshot_button_default.snap  widget_tests__snapshot_checkbox_checked.snap  widget_tests__snapshot_collapsible_collapsed.snap  widget_tests__snapshot_collapsible_expanded.snap  widget_tests__snapshot_data_table_3x3.snap  widget_tests__snapshot_footer_empty.snap  widget_tests__snapshot_log.snap  widget_tests__snapshot_markdown_link.snap  widget_tests__snapshot_markdown_list.snap  widget_tests__snapshot_markdown_mixed.snap  widget_tests__snapshot_placeholder_default.snap  widget_tests__snapshot_placeholder_labeled.snap  widget_tests__snapshot_progress_bar_50_percent.snap  widget_tests__snapshot_progress_bar_empty.snap  widget_tests__snapshot_scroll_view_with_content.snap  widget_tests__snapshot_select_initial.snap  widget_tests__snapshot_switch_on.snap  widget_tests__snapshot_tabs_first_active.snap  widget_tests__snapshot_tree_collapsed.snap  widget_tests__snapshot_tree_expanded.snap  widget_tests__text_area_line_numbers.snap
docs/: css-reference.md  guide.md
(+69 files in other folders)
