[package]
name = "textual-rs-macros"
version = "0.3.16"
edition.workspace = true
description = "Procedural macros for the textual-rs TUI framework"
license = "MIT"
repository = "https://github.com/jabberwock/textual-rs"
keywords = ["tui", "terminal", "macro", "derive"]
categories = ["command-line-interface"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
