[package]
name = "textual-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
flume = "0.12"
anyhow = "1.0"
futures = "0.3"
slotmap = "1.0"
taffy = "0.9.2"
cssparser = "0.37.0"
cssparser-color = "0.5.0"
reactive_graph = { version = "0.2.13", features = ["effects"] }
any_spawner = { version = "0.3.0", features = ["tokio"] }

[dev-dependencies]
insta = "1.46.3"
proptest = "1.11.0"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "irc_demo"
path = "examples/irc_demo.rs"
