[package]
name = "textual-rs"
version = "0.3.2"
edition.workspace = true
rust-version.workspace = true
description = "A Rust port of the Textual TUI framework — build beautiful terminal UIs with CSS styling, reactive signals, and composable widgets"
license = "MIT"
repository = "https://github.com/jabberwock/textual-rs"
readme = "../../README.md"
keywords = ["tui", "terminal", "css", "widgets", "reactive"]
categories = ["command-line-interface", "gui"]

[dependencies]
textual-rs-macros = { path = "../textual-rs-macros", version = "0.3.1" }
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
flume = "0.12"
anyhow = "1.0"
futures = "0.3"
slotmap = "1.0"
taffy = "0.9.2"
cssparser = "0.37.0"
cssparser-color = "0.5.0"
reactive_graph = { version = "0.2.13", features = ["effects"] }
any_spawner = { version = "0.3.0", features = ["tokio"] }
pulldown-cmark = { version = "0.13", default-features = false }
arboard = { version = "3.6", default-features = false }
unicode-width = "0.2"
strsim = "0.11"
walkdir = "2"

[dev-dependencies]
insta = "1.46.3"
proptest = "1.11.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "irc_demo"
path = "examples/irc_demo.rs"

[[example]]
name = "tutorial_01_hello"
path = "examples/tutorial_01_hello.rs"

[[example]]
name = "tutorial_02_layout"
path = "examples/tutorial_02_layout.rs"

[[example]]
name = "tutorial_03_events"
path = "examples/tutorial_03_events.rs"

[[example]]
name = "tutorial_04_reactive"
path = "examples/tutorial_04_reactive.rs"

[[example]]
name = "tutorial_05_workers"
path = "examples/tutorial_05_workers.rs"

[[example]]
name = "tutorial_06_screens"
path = "examples/tutorial_06_screens.rs"
